kubernetes/apps/office/penpot/app/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penpot
  namespace: office
  labels:
    gethomepage.dev/enabled: "true"
